--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~ngx-toastr/toastr.css";
+
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+.login,
+.sign-up {
+  background-color: #0079d3;
+  border-color: #0079d3;
+  color: aliceblue;
+  fill: #0079d3;
+  border: 1px solid;
+  border-radius: 4px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  line-height: 24px;
+  text-transform: uppercase;
+  padding: 3px 16px;
+  opacity: 1;
+}
+html {
+  padding: 0;
+  height: 100%;
+}
+body {
+  margin-top: 63px;
+  height: 100%;
+}
